cmake_minimum_required (VERSION 2.8.11)
project (DesignPattern)

add_executable(AbstractFactory TestAbstractFactory.cpp)                                                                                                                                     
add_executable(AdapterPattern TestAdapterPattern.cpp)                                                                                                                                      
add_executable(BridgePattern TestBridgePattern.cpp)                                                                                                                                       
add_executable(BuilderPattern TestBuilderPattern.cpp)                                                                                                                                      
add_executable(ChainOfResponsibility TestChainOfResponsibility.cpp)                                                                                                                               
add_executable(CommandPattern TestCommandPattern.cpp)                                                                                                                                      
add_executable(CompositePattern TestCompositePattern.cpp)                                                                                                                                    
add_executable(DecoratorPattern TestDecoratorPattern.cpp)                                                                                                                                    
add_executable(FacadePattern TestFacadePattern.cpp)                                                                                                                                       
add_executable(FactoryMethodPattern TestFactoryMethodPattern.cpp)                                                                                                                                
add_executable(FlyweightPattern TestFlyweightPattern.cpp)                                                                                                                                    
add_executable(InterpreterPattern TestInterpreterPattern.cpp)                                                                                                                                  
add_executable(MediatorPattern TestMediatorPattern.cpp)                                                                                                                                     
add_executable(MementoPattern TestMementoPattern.cpp)                                                                                                                                      
add_executable(ObserverPattern TestObserverPattern.cpp)                                                                                                                                     
add_executable(ProtoTypePattern TestProtoTypePattern.cpp)                                                                                                                                    
add_executable(ProxyPattern TestProxyPattern.cpp)                                                                                                                                        
add_executable(SimpleFactory TestSimpleFactory.cpp)                                                                                                                                       
add_executable(SingleTonPattern TestSingleTonPattern.cpp)                                                                                                                                    
add_executable(StatePattern TestStatePattern.cpp)                                                                                                                                        
add_executable(StrategyPattern TestStrategyPattern.cpp)                                                                                                                                     
add_executable(TemplatePattern TestTemplatePattern.cpp)                                                                                                                                     
add_executable(VisitorPattern TestVisitorPattern.cpp)                                                                                                                                      
